Fixed image selection scaling, troubleshooting scrollbar

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ main {
 
 #image-container {
     max-width: 40rem;
-    margin: 0rem 2rem 0rem 2rem;
+    margin: 0rem 2% 0rem 2%;
 }
 
 #image-container img {
@@ -607,8 +607,7 @@ footer {
     }
 }
 
-/* TODO: Change styling for product image selection for mobile so it doesn't scale
-
+/* TODO:
     Create active seleciton for color selection
 
     Create active selection border for clicked size
